--- a/index.html
+++ b/index.html
@@ -122,15 +122,14 @@
             class="container flex flex-col items-center justify-between h-full max-w-6xl px-8 mx-auto -mt-32 lg:flex-row xl:px-0">
             <div
                 class="z-30 flex flex-col items-center w-full max-w-xl pt-48 text-center lg:items-start lg:w-1/2 lg:pt-20 xl:pt-40 lg:text-left">
-                <h1 class="relative mb-4 text-3xl font-black leading-tight text-gray-900 sm:text-6xl xl:mb-8">Introduction To Bash Scripting</h1>
-                <p class="pr-0 mb-8 text-base text-gray-600 sm:text-lg xl:text-xl lg:pr-20">Are you ready to start your
-                    adventure and start writing awesome Bash scripts?</p>
-                <a href="#download"
-                    class="relative self-start inline-block w-auto px-8 py-4 mx-auto mt-0 text-base font-bold text-white bg-gray-900 hover:bg-gray-700 border-t border-gray-200 rounded-md shadow-xl sm:mt-1 fold-bold lg:mx-0">Free Download
+                <h1 class="relative mb-4 text-3xl font-black leading-tight text-gray-900 sm:text-6xl xl:mb-8">FSS ist super cool!</h1>
+                <p class="pr-0 mb-8 text-base text-gray-600 sm:text-lg xl:text-xl lg:pr-20">Bist du bereit einen kackenden Elefanten zu sehen?</p>
+                <a href="#elefant"
+                    class="relative self-start inline-block w-auto px-8 py-4 mx-auto mt-0 text-base font-bold text-white bg-gray-900 hover:bg-gray-700 border-t border-gray-200 rounded-md shadow-xl sm:mt-1 fold-bold lg:mx-0">Dann los!
                 </a>
                 <!-- Sponsors with section -->
                 <div class="flex-col hidden mt-12 sm:flex lg:mt-24">
-                    <p class="mb-4 text-sm font-medium tracking-widest text-gray-500 uppercase">Sponsored by</p>
+                    <p class="mb-4 text-sm font-medium tracking-widest text-gray-500 uppercase">Achso, hier sind übrigens noch unsere Sponsoren</p>
                     <div class="flex">
                         <!-- <svg class="h-8 mr-4 text-gray-500 duration-150 cursor-pointer fill-current transition-color hover:text-gray-600"></svg> -->
                         <a href="https://devdojo.com/?ref=bobbyiliev">
@@ -200,7 +199,7 @@
     <!-- Content Section -->
     <div id="ebook" class="flex flex-col w-full overflow-hidden border-t border-gray-200 pt-10 bg-white lg:flex-row sm:mx-auto">
         <div class="relative lg:w-1/2">
-            <img src="https://cdn.devdojo.com/posts/images/November2020/open-source-introduction-to-bash-scripting-ebook-guide.jpg?auto=format&q=70&w=680" alt="Persons talking in a work setting." class="object-cover w-full lg:absolute h-80 lg:h-full">
+            <img id='elefant' src="https://th.bing.com/th/id/OIP.sgpRFijuH70HPfvbnv2BlgHaFd?rs=1&pid=ImgDetMain" alt="Persons talking in a work setting." class="object-cover w-full lg:absolute h-80 lg:h-full">
             <svg class="absolute top-0 right-0 hidden h-full text-white lg:inline-block" viewBox="0 0 20 104" fill="currentColor">
                 <polygon points="17.3036738 5.68434189e-14 20 5.68434189e-14 20 104 0.824555778 104"></polygon>
             </svg>
